# Starworld

./: .gitignore  CHANGELOG.md  CI_SETUP_SUMMARY.md  CMakeLists.txt  CODE_CLEANUP_PLAN.md  DEVELOPER_GUIDE.md  ENTITY_RENDERING_ENHANCEMENTS.md  LICENSE  OVERTE_ASSIGNMENT_CLIENT_TASK.md  OVERTE_AUTH.md  README.md  RENDERING_FIX_SUMMARY.md  build_and_test.sh  ci-test.sh  run_with_auth.sh  test_entities.json
.gitea/: CI_SETUP.md
.gitea/workflows/: ci.yml  rust-quality.yml
.github/workflows/: ci.yml  rust-quality.yml
_codeql_build_dir/: starworld  starworld-tests
bridge/: Cargo.toml
bridge/examples/: test_connect.rs
bridge/src/: lib.rs  model_downloader.rs  primitives.rs
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  DIRECTORY_STRUCTURE.md  ENTITY_RENDERING_ENHANCEMENTS.md  ENTITY_TROUBLESHOOTING.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODELCACHE_IMPLEMENTATION.md  NETWORK_PROTOCOL_INVESTIGATION.md  OAUTH_TESTING.md  README.md  SESSION_2025-11-10_HMAC_INVESTIGATION.md  TESTING_GUIDE.md
examples/primitives/: sphere.glb
primitives/: cube.glb
scripts/: build_and_test.sh  run_with_auth.sh
src/: DomainDiscovery.cpp  DomainDiscovery.hpp  InputHandler.cpp  InputHandler.hpp  ModelCache.cpp  ModelCache.hpp  NLPacketCodec.cpp  NLPacketCodec.hpp  OverteAuth.cpp  OverteAuth.hpp  OverteAuth_new.cpp  OverteClient.cpp  OverteClient.hpp  OverteNetworkClient.hpp  RSAKeypair.cpp  RSAKeypair.hpp  SceneSync.Hpp  SceneSync.cpp  StardustBridge.cpp  StardustBridge.hpp  main.cpp
tests/: README.md  TestHarness.cpp
tools/: blender_export_primitives.py  blender_export_simple.py  compute_from_overte.cpp  compute_overte_protocol.py  compute_protocol_signature.py  compute_protocol_v2.py  extract_protocol.cpp  generate_primitives.py  inject_entities_enhanced.py  inject_test_entities.py  print_server_protocol.cpp  protocol_signature.txt  test_blender_export.py
tools/gltf_primitives/: Cargo.toml
