[package]
name = "stardust_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "stardust_bridge"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.38", features = ["rt", "macros"] }
glam = "0.28"
lazy_static = "1.4"
zbus = { version = "5.5.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.stardust-xr-asteroids]
path = "../third_party/asteroids"

[dependencies.stardust-xr-fusion]
path = "../third_party/core/fusion"

[features]
# Feature enabling real StardustXR integration when crates are present.
real = []
